// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyChecker matches snapshot when dependencies are loading 1`] = `
<div class="ipl-expansion-panel__content" data-v-1dcbcc2a="">
  <div class="ipl-expansion-panel__header layout horizontal center-vertical" data-v-1dcbcc2a="">
    <div class="ipl-expansion-panel__header-background" data-v-1dcbcc2a=""></div>
    <div class="ipl-expansion-panel__title" data-v-1dcbcc2a="">Dependency check</div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-1dcbcc2a=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-1dcbcc2a=""></div>
  </div>
  <div class="content" data-v-1dcbcc2a="">
    <div class="status-row layout horizontal center-vertical m-t-6">
      <div class="status-row__status-light color-yellow"></div>Loading...
    </div>
    <ipl-button-stub label="Check again" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" class="m-t-8"></ipl-button-stub>
  </div>
</div>
`;

exports[`DependencyChecker matches snapshot when dependencies are present 1`] = `
<div class="ipl-expansion-panel__content" data-v-1dcbcc2a="">
  <div class="ipl-expansion-panel__header layout horizontal center-vertical" data-v-1dcbcc2a="">
    <div class="ipl-expansion-panel__header-background" data-v-1dcbcc2a=""></div>
    <div class="ipl-expansion-panel__title" data-v-1dcbcc2a="">Dependency check</div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon" data-v-1dcbcc2a=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-1dcbcc2a=""></div>
  </div>
  <div class="content" data-v-1dcbcc2a="" style="display: none;">
    <div class="status-row layout horizontal center-vertical m-t-6">
      <div class="status-row__status-light color-green"></div>Found Node.js 12.3.4.
    </div>
    <ipl-button-stub label="Check again" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" class="m-t-8"></ipl-button-stub>
  </div>
</div>
`;

exports[`DependencyChecker matches snapshot when node.js is missing 1`] = `
<div class="ipl-expansion-panel__content" data-v-1dcbcc2a="">
  <div class="ipl-expansion-panel__header layout horizontal center-vertical" data-v-1dcbcc2a="">
    <div class="ipl-expansion-panel__header-background" data-v-1dcbcc2a=""></div>
    <div class="ipl-expansion-panel__title" data-v-1dcbcc2a="">Dependency check</div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-1dcbcc2a=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-1dcbcc2a=""></div>
  </div>
  <div class="content" data-v-1dcbcc2a="">
    <div class="status-row layout horizontal center-vertical m-t-6">
      <div class="status-row__status-light color-red"></div>Node.js not found.
    </div>
    <ipl-button-stub label="Check again" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" class="m-t-8"></ipl-button-stub>
  </div>
</div>
`;
